--- a/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
+++ b/samples/AspnetWebApi2Helpers.Sample.Web/packages.config
@@ -1,26 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="AspnetWebApi2Helpers.Serialization" version="1.0.0-alpha1" targetFramework="net45" />
-  <package id="AspnetWebApi2Helpers.Serialization.Protobuf" version="1.0.0-alpha1" targetFramework="net45" />
-  <package id="bootstrap" version="3.3.1" targetFramework="net45" />
-  <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="AspNetWebApi2Helpers.Serialization" version="1.0.0-alpha1-1" targetFramework="net45" />
+  <package id="AspNetWebApi2Helpers.Serialization.Protobuf" version="1.0.0-alpha1-1" targetFramework="net45" />
+  <package id="jQuery" version="1.6.2" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
   <package id="knockoutjs" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.480" targetFramework="net45" />
-  <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="WebApiContrib.Formatting.ProtoBuf" version="0.9.5.0" targetFramework="net45" />
   <package id="WebApiTestOnHelpPage" version="1.3.4" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
